Resend added and EmailService updated